[package]
name = "repro"
version = "0.1.0"
authors = ["Jasper <jbg@rf.net.nz>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
crossbeam = "*"
futures-preview = { version = "0.3.0-alpha.17", features = ["compat", "async-await", "nightly"] }
rand = "*"
tokio = { git = "https://github.com/tokio-rs/tokio" }
